fixed header wrapping issues and other style glitches

--- a/vteach/css/main.css
+++ b/vteach/css/main.css
@@ -148,6 +148,10 @@ pre {
 .book-title {
   font-weight: bold; }
 
+html {
+  overflow-y: scroll;
+  overflow-x: hidden; }
+
 /**
  * Site header
  */
@@ -156,6 +160,7 @@ pre {
   border-bottom: 1px solid #e8e8e8;
   min-height: 56px;
   position: relative;
+  overflow-x: hidden;
   background-color: #f8f8f8; }
 
 .site-title {
@@ -291,11 +296,7 @@ pre {
  * Posts
  */
 .post-header {
-  word-wrap: break-word;
-  margin-bottom: 30px;
-  width: 800px;
-  overflow-x: hidden;
-  margin: 0 auto; }
+  margin-bottom: 30px; }
 
 .post-title {
   font-size: 42px;
